View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025166 | Community | OCCT:Data Exchange | public | 2014-08-19 14:37 | 2014-11-11 12:58 |
Reporter | drazmyslovich | Assigned To | bugmaster | ||
Priority | normal | Severity | feature | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Product Version | 6.6.0 | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0025166: STEP Reader - allow GEOMETRIC_SET entity to accept non-geometric children | ||||
Description | HOOPS Exchange Viewer can generate STEP files with the geometric sets, which contain non-geometric objects, but SHELL_BASED_SURFACE_MODEL objects. The current STEP import object doesn't allow such geometric sets, ignores all children and results with empty set. The proposed change: allow GeometricRepresentationItem-s to be added to GeometricSet | ||||
Steps To Reproduce | Import the attached piston.stp | ||||
Tags | No tags attached. | ||||
Test case number | bugs step(014) bug25166 | ||||
|
Branch CR25166 has been created by drazmyslovich. SHA-1: 13eaefe475a624782113bc9a58720cd3fd26e427 This branch includes the following new commits: new 13eaefe 0025166: Allow GEOMETRIC_SET entity to accept GeometricRepresentationItem children Detailed log of new commits: commit 13eaefe475a624782113bc9a58720cd3fd26e427 Author: razmyslovich Date: Tue Aug 19 12:38:51 2014 +0200 0025166: Allow GEOMETRIC_SET entity to accept GeometricRepresentationItem children |
|
The feature is committed. Please, review it |
|
--- a/src/StepToTopoDS/StepToTopoDS_Builder.cdl +++ b/src/StepToTopoDS/StepToTopoDS_Builder.cdl @@ -34,10 +34,11 @@ uses - NMTool from StepToTopoDS + NMTool from StepToTopoDS, + ActorRead from STEPControl it looks like packages StepToTopoDS and STEPControl will have cyclic dependency, which is not good (and normally forbidden in CDL). |
|
Dear Dima, >> Import the attached piston.stp the attachment seems to be forgotten. |
|
piston.stp (2,073,858 bytes) |
|
Hi, kgv, sorry, the file is now attached. Regarding the cyclic dependencies - please, review, maybe you'll find the better way to resolve the dependencies; for me it was just the clearest possibility. |
|
Branch CR25166 has been updated by gka. SHA-1: 8aaca23d7a644133f8ce7d1ac7fe21c5b525add2 from 13eaefe 0025166: Allow GEOMETRIC_SET entity to accept GeometricRepresentationItem children new 8aaca23 Modification to avoid cyclic dependency between STEPControl and StepToTopoDS packages Detailed log of new commits: commit 8aaca23d7a644133f8ce7d1ac7fe21c5b525add2 Author: gka Date: Wed Aug 20 16:38:55 2014 +0400 Modification to avoid cyclic dependency between STEPControl and StepToTopoDS packages |
|
Branch CR25166 is ready to be tested |
|
Dear BugMaster, Branch CR25166 from occt git-repository (and master from products git-repository) was compiled on Linux and Windows platforms and tested. SHA-1: 8aaca23d7a644133f8ce7d1ac7fe21c5b525add2 Number of compiler warnings: occt component : Linux: 15 (15 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests/CR25166-master-occt/Debian60-64/bugs/step/bug25166.html http://occt-tests/CR25166-master-occt/Windows-32-VC10/bugs/step/bug25166.html bugs step(014) bug25166: OK Testing on Linux: occt component : Total MEMORY difference: 352213364 / 351903736 Total CPU difference: 44213.05000000006 / 45953.98000000014 products component : Total MEMORY difference: 109545196 / 109556352 Total CPU difference: 18585.019999999968 / 18691.699999999983 Testing on Windows: occt component : Total MEMORY difference: 239813796 / 239728968 Total CPU difference: 35134.84375 / 32650.4375 products component : Total MEMORY difference: 66305908 / 65539272 Total CPU difference: 12263.3125 / 13013.484375 There are no differences in images found by testdiff. |
|
Branch CR25166 has been updated by mkv. SHA-1: a1e838649fa2d22fdd8029605167255e808c25d9 Detailed log of new commits: Author: mkv Date: Thu Aug 21 11:49:01 2014 +0400 Test cases for issue CR25166 |
|
Branch CR25166 has been deleted by inv. SHA-1: a1e838649fa2d22fdd8029605167255e808c25d9 |
occt: master 38deba5d 2014-08-21 08:41:24 Committer: bugmaster Details Diff |
0025166: STEP Reader - allow GEOMETRIC_SET entity to accept non-geometric children Allow GEOMETRIC_SET entity to accept GeometricRepresentationItem children Modification to avoid cyclic dependency between STEPControl and StepToTopoDS packages Test cases for issue CR25166 |
Affected Issues 0025166 |
|
mod - src/STEPControl/STEPControl_ActorRead.cxx | Diff File | ||
mod - src/StepShape/StepShape_GeometricSetSelect.cxx | Diff File | ||
mod - src/StepToTopoDS/StepToTopoDS.cdl | Diff File | ||
mod - src/StepToTopoDS/StepToTopoDS_Builder.cdl | Diff File | ||
mod - src/StepToTopoDS/StepToTopoDS_Builder.cxx | Diff File | ||
add - tests/bugs/step/bug25166 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-08-19 14:37 | drazmyslovich | New Issue | |
2014-08-19 14:37 | drazmyslovich | Assigned To | => gka |
2014-08-19 14:39 | git | Note Added: 0030879 | |
2014-08-19 14:40 | drazmyslovich | Note Added: 0030880 | |
2014-08-19 14:40 | drazmyslovich | Status | new => resolved |
2014-08-19 15:02 | kgv | Note Added: 0030881 | |
2014-08-19 15:03 | kgv | Summary | STEP: Allow GEOMETRIC_SET entity to accept non-geometric children => STEP Reader - allow GEOMETRIC_SET entity to accept non-geometric children |
2014-08-19 15:05 | kgv | Note Added: 0030882 | |
2014-08-19 15:12 | drazmyslovich | File Added: piston.stp | |
2014-08-19 15:14 | drazmyslovich | Note Added: 0030883 | |
2014-08-20 16:39 | git | Note Added: 0030942 | |
2014-08-20 16:40 | gka | Note Added: 0030943 | |
2014-08-20 16:40 | gka | Status | resolved => reviewed |
2014-08-20 17:19 |
|
Assigned To | gka => mkv |
2014-08-20 18:21 | abv | Relationship added | parent of 0025176 |
2014-08-21 11:49 |
|
Note Added: 0030981 | |
2014-08-21 11:49 | git | Note Added: 0030982 | |
2014-08-21 11:50 |
|
Test case number | => bugs step(014) bug25166 |
2014-08-21 11:50 |
|
Assigned To | mkv => bugmaster |
2014-08-21 11:50 |
|
Status | reviewed => tested |
2014-08-22 15:42 | bugmaster | Changeset attached | => occt master 38deba5d |
2014-08-22 15:42 | bugmaster | Status | tested => verified |
2014-08-22 15:42 | bugmaster | Resolution | open => fixed |
2014-09-08 15:51 | git | Note Added: 0031476 | |
2014-11-11 12:45 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:58 |
|
Status | verified => closed |