0025166: STEP Reader - allow GEOMETRIC_SET entity to accept non-geometric children

Allow GEOMETRIC_SET entity to accept GeometricRepresentationItem children

Modification to avoid cyclic dependency between STEPControl and StepToTopoDS packages

Test cases for issue CR25166